# praatfan-core-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  PRAAT.md  README.md
.github/workflows/: release.yml
docs/pkg/: README.md  package.json  praatfan_core_wasm.js  praatfan_core_wasm_bg.wasm  praatfan_core_wasm_bg.wasm.d.ts  praatfan_gpl.d.ts  praatfan_gpl.js  praatfan_gpl_bg.wasm
examples/: all_formants.rs  check_errors.rs  check_resample.rs  check_window.rs  compare_frame_values.rs  compare_frames.rs  compare_lpc_step_by_step.rs  compare_resampled.rs  compare_with_praat.rs  debug_fft_filter.rs  debug_formant_detail.rs  debug_formant_vs_direct.rs  debug_frame0.rs  debug_frame_extract.rs  debug_lpc.rs  debug_resample.rs  detailed_comparison.rs  fft_dump.rs  formant_compare.rs  formant_debug.rs  formant_debug2.rs  formant_debug_frame.rs  formant_frame2.rs  formant_json.rs  formant_path_json.rs  formant_stats.rs  formant_stats_voiced.rs  frame_debug.rs  harmonicity_json.rs  hnr_debug.rs  intensity_json.rs  lpc_debug.rs  pitch_json.rs  profile_sinc.rs  raw_candidates.rs  resample_debug.rs  sample_debug.rs  spectrogram_json.rs  spectrum_json.rs  test_with_praat_samples.rs  (+4 more)
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: acoustic_extraction.py  analyze.py
python/python/praat_core/: __init__.py
python/python/praat_core/compat/: __init__.py  parselmouth.py
python/python/praatfan_core/: __init__.py
python/python/praatfan_core/compat/: __init__.py  parselmouth.py
python/python/praatfan_gpl/: __init__.py
python/python/praatfan_gpl/compat/: __init__.py  parselmouth.py
python/src/: lib.rs
scripts/: bench_parselmouth.py  bench_praatfan.py  check_h95_regression.py  compare_formant_path.py  compare_formants.py  compare_harmonicity.py  compare_intensity.py  compare_pitch.py  compare_spectrogram.py  compare_spectrum.py  full_comparison.py  generate_ground_truth.py  generate_h95_baseline.py  verify_formant_match.py  verify_wasm.mjs
src/: formant.rs  formant_modeler.rs  formant_path.rs  harmonicity.rs  intensity.rs  interpolation.rs  lib.rs  pitch.rs  sound.rs  spectrogram.rs  spectrum.rs  window.rs
src/utils/: fft.rs  lpc.rs  mod.rs
src/utils/fft_fftpack/: dradb.rs  dradf.rs  mod.rs  smallft.rs
tests/: ground_truth_comparison.rs
tests/baselines/: README.md  STATE.md  h95_formantpath_parity.csv
tests/fixtures/: En-US-One.ogx  one_two_three_four_five-stereo.flac  one_two_three_four_five.flac
tests/ground_truth/: En-US-One.json  all_ground_truth.json  one_two_three_four_five.json  one_two_three_four_five_16k.json  one_two_three_four_five_24bit.json  one_two_three_four_five_32float.json  one_two_three_four_five_44k.json  one_two_three_four_five_48k.json  one_two_three_four_five_8bit.json  one_two_three_four_five_stereo.json
wasm/: Cargo.toml  README.md  test.html
wasm/examples/acoustic-analyzer/: README.md  index.html
wasm/src/: lib.rs
