[package]
name = "praat-core-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust reimplementation of Praat's core acoustic analysis algorithms"
repository = "https://github.com/your-username/praat-core-rs"
keywords = ["audio", "speech", "acoustics", "praat", "signal-processing"]
categories = ["multimedia::audio", "science"]

[dependencies]
ndarray = "0.15"
rustfft = "6.1"
num-complex = "0.4"
thiserror = "1.0"
hound = "3.5"
nalgebra = "0.33"

# Multi-format audio decoding
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "pcm", "vorbis"] }

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "praat_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
