[package]
name = "praat-core-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust reimplementation of Praat's core acoustic analysis algorithms"
repository = "https://github.com/your-username/praat-core-rs"
keywords = ["audio", "speech", "acoustics", "praat", "signal-processing"]
categories = ["multimedia::audio", "science"]

[features]
default = ["file-io"]
# File I/O support - disable for WASM builds
file-io = ["dep:hound", "dep:symphonia"]

[dependencies]
ndarray = "0.15"
rustfft = "6.1"
num-complex = "0.4"
thiserror = "1.0"
nalgebra = "0.33"

# File I/O dependencies (optional for WASM compatibility)
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "pcm", "vorbis"], optional = true }

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "praat_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
