[package]
name = "praatfan-core-rs"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
description = "Rust reimplementation of Praat's core acoustic analysis algorithms"
repository = "https://github.com/ucpresearch/praatfan-core-rs"
keywords = ["audio", "speech", "acoustics", "praat", "signal-processing"]
categories = ["multimedia::audio", "science"]

[features]
default = ["file-io"]
# File I/O support - disable for WASM builds
file-io = ["dep:hound", "dep:symphonia"]
# Multi-threaded frame computation - disable for WASM builds
parallel = ["dep:rayon"]

[dependencies]
ndarray = "0.15"
rustfft = "6.1"
num-complex = "0.4"
thiserror = "1.0"
nalgebra = "0.33"

# File I/O dependencies (optional for WASM compatibility)
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "pcm", "vorbis"], optional = true }

# Parallelism (optional for WASM compatibility)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "praatfan_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
