[package]
name = "praatfan-core-python"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Python bindings for praatfan-core-rs acoustic analysis library"

[lib]
name = "praatfan_gpl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
praatfan-core-rs = { path = ".." }
