[package]
name = "praatfan-gpl"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "praatfan-gpl: WebAssembly bindings for praatfan-core-rs acoustic analysis library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# Core library without file I/O features
praatfan-core-rs = { path = "..", default-features = false }

# For serde support in WASM
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
